# crypto-auth

./: CMakeLists.txt
client/: CMakeLists.txt  main.cpp
common/: CryptoHelper.cpp  CryptoHelper.hpp
proto/: auth.options  auth.proto
server/: CMakeLists.txt  main.cpp
